--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Deliciae <baramee1407@gmail.com>"]
 python = "^3.9"
 Django = "^4.0.4"
 gunicorn = "^20.1.0"
+whitenoise = {extras = ["brotli"], version = "^6.1.0"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
