--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,16 @@ python = "^3.9"
 Django = "^4.0.4"
 gunicorn = "^20.1.0"
 whitenoise = {extras = ["brotli"], version = "^6.1.0"}
+toml = "^0.10.2"
+protobuf = "^3.20.1"
+numpy = "^1.22.3"
+gspread = "^5.3.2"
+google-api-core = "^2.7.3"
+google-api-python-client = "^2.47.0"
+google-auth = "^2.6.6"
+google-auth-httplib2 = "^0.1.0"
+google-auth-oauthlib = "^0.5.1"
+googleapis-common-protos = "^1.56.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
