--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ google-auth = "^2.6.6"
 google-auth-httplib2 = "^0.1.0"
 google-auth-oauthlib = "^0.5.1"
 googleapis-common-protos = "^1.56.0"
+supabase = "^0.5.6"
+djangorestframework = "^3.13.1"
+django-cors-headers = "^3.12.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
